<resources>
    <string name="app_name">Parent Control App</string>
    <string name="select_user">Select User</string>
    <string name="or">or</string>
    <string name="add_new_user">Add new User</string>
    <string name="location">LOCATION</string>
    <string name="call_log">CALL LOG</string>
    <string name="call_log_bold"><b>Call log</b></string>
    <string name="sms_log">SMS LOG</string>
    <string name="sms_log_bold"><b>SMS log</b></string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="welcome_text_home_fragment">Welcome to Parent Control App. This app helps you to track your children\'s phones and offers you a lot of other useful features. Thanks for using this app.</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="required_field">This field is required!</string>
    <string name="number">Number</string>
    <string name="length">Length</string>
    <string name="select_user_you_want_to_track">Select User you want to track</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_user_name">no user name</string>
    <string name="no_date">No date</string>
    <string name="last_known_location">Last Known Location</string>
    <string name="show_user_locations">Show user\'s locations</string>
    <string name="no_name">No name</string>
    <string name="show">Show</string>
    <string name="default_notification_channel_id" translatable="false">my_default_notification_channel_id</string>
    <string name="notification_title">My Notification Title</string>
    <string name="notification_content">My Notification Content</string>
    <string name="channel_name" translatable="false">My Notification Channel Name</string>
    <string name="channel_description" translatable="false">My Notification Channel Description</string>
    <string name="show_forbidden_locations">Show forbidden locations</string>
    <string name="add_marker_hint">Tap on map to select a location. Long press on added marker to move.</string>
    <string name="add_new_forbidden_location">Add new forbidden location</string>
    <string name="duration_unit">m</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password_underlined"><u>Forgot your password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="field_is_required">This field is required!</string>
    <string name="no_internet">No Internet</string>
    <string name="error_try_again_later">Error. Try again later.</string>
    <string name="registration">Registration</string>
    <string name="must_contain_3_chars">Must contain at least 3 characters.</string>
    <string name="must_contain_6_chars">Must contain at least 6 characters.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="dialog_message">We sent you an email with link for activating your account. Only after activating your account can you log in.</string>
    <string name="dialog_close">Close</string>
    <string name="enter_valid_email">Enter valid email address.</string>
    <string name="new_child_added">New child added !</string>
    <string name="new_child_added_dialog_msg">- new child has been added to your list. In order to track his/her phone enter this code on their phone: </string>
    <string name="settings">Settings</string>
    <string name="special_mode">Special Mode</string>
    <string name="language">Language</string>
    <string name="welcome_text_special_mode">SPECIAL mode is enabled for the app. This means You will get notification when child will go more than 100 meters away from you.</string>
    <string name="no_number">No number</string>
    <string name="menu">Menu</string>

    <string-array name="languages">
        <item>English</item>
        <item>Հայերեն</item>
        <item>Русский</item>
    </string-array>
</resources>
