<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_devices"
        android:enabled="true"
        android:title="@string/devices"
        android:icon="@drawable/icon_devices"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/action_create_user"
        android:enabled="true"
        android:title="@string/add_new_user"
        android:icon="@drawable/icon_add_user"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
</menu>