<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@drawable/background_12">

    <TextView
        android:id="@+id/selected_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_location_background_selector"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/location"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/call_log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_call_log_background_selector"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/call_log"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/sms_log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_sms_log_background_selector"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/sms_log"
        android:textColor="@color/black" />

</LinearLayout>